qtbase-opensource-src (5.12.5+dfsg-6) unstable; urgency=medium

  [ Lisandro Damián Nicanor Pérez Meyer ]
  * Split the doxygen .tags files into a new qtbase5-doc-dev package,
    see #922707.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 22 Dec 2019 09:30:42 +0100

qtbase-opensource-src (5.12.5+dfsg-5) unstable; urgency=medium

  [ Pino Toscano ]
  * Limit the libdrm-dev build dependency as linux-any, as it is only useful
    on Linux. (Closes: #947675)

  [ Dmitry Shachnev ]
  * Backport upstream patch to add RISC-V detection.
  * Update debian/libqt5network5.symbols from buildds’ logs.

 -- Dmitry Shachnev <mitya57@debian.org>  Tue, 31 Dec 2019 14:19:15 +0300

qtbase-opensource-src (5.12.5+dfsg-4) unstable; urgency=medium

  * Build-depend on libdrm-dev and libxcb-glx0-dev, to fix FTBFS.

 -- Dmitry Shachnev <mitya57@debian.org>  Sun, 22 Dec 2019 00:28:25 +0300

qtbase-opensource-src (5.12.5+dfsg-3) unstable; urgency=medium

  * Backport upstream patch to fix uic handling of .ui files with global
    includes. Thanks to Alexander Volkov for the pointer!
  * Stop depending on libgl1-mesa-dev and libgles2-mesa-dev, which are
    transitional packages in mesa ≥ 19.3.0~rc6-1.
  * Also make qtbase5-dev explicitly depend on libegl-dev (closes: #947117).
  * Move the compatibility symlinks from qtbase5-dev-tools to qtbase5-dev
    (closes: #939653).

 -- Dmitry Shachnev <mitya57@debian.org>  Sat, 21 Dec 2019 14:30:03 +0300

qtbase-opensource-src (5.12.5+dfsg-2) unstable; urgency=medium

  * Update symbols files from buildds’ logs.
  * Add support for PostgreSQL 12 (closes: #941763).
  * Bump Standards-Version to 4.4.1, no changes needed.
  * Upload to unstable.

 -- Dmitry Shachnev <mitya57@debian.org>  Sun, 20 Oct 2019 22:33:00 +0300

qtbase-opensource-src (5.12.5+dfsg-1) experimental; urgency=medium

  * Merge 5.11.3+dfsg1-3 and -4 uploads from unstable.
  * New upstream release.
  * Drop hidpi_crash.diff, applied in the new release.